fix: viewport gradient on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -19,17 +19,30 @@
 background before wave scene is loaded,
 background animation transition */
 body {
-    min-height: 100vh;
-    background: linear-gradient(to bottom, rgb(0, 0, 0), rgb(0, 46, 36));
-    background-attachment: fixed;
+    /* min-height: 100vh; */
+    /* background: linear-gradient(to bottom, rgb(0, 0, 0), rgb(0, 46, 36)); */
+    /* background-attachment: fixed; */
     display: flex;
 }
+
+#gradient-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgb(0, 0, 0), rgb(0, 46, 36));
+    z-index: -1;
+}
+
 
 /* lining up the threejs canvas behind the UI */
 .webgl {
     position: fixed;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
     z-index: 1;
 }
 
